# algorithms

./: CMakeLists.txt  README.md
src/: binary_search.cpp  sequential_search.cpp
src/include/: binary_search.h  sequential_search.h
